--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html {
 body {
   color: #585858;
   background-color: #fff;
-  font-family: “Georgia”, serif;
+  font-family: “Times New Roman”;
 }
 h1 {
   font-size: 40px;
