Changed Fonts and color.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -5,6 +5,8 @@
     border-top: 5px solid $grey-color-dark;
     border-bottom: 1px solid $grey-color-light;
     min-height: 56px;
+    font-family: "Bodoni 72",Helvetica;
+    font-weight: 100;
 
     // Positioning context for the mobile navigation icon
     position: relative;
