--- a/style.css
+++ b/style.css
@@ -4,14 +4,22 @@ html {
   overflow-y: scroll;
 }
 body {
-  color: #585858;
+  
   background-color: #fff;
-  font-family: “Times New Roman”;
+  color:#000000;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: 100;
+  
 }
 h1 {
-  font-size: 40px;
+  font-size: 35px;
   margin-bottom: 10px;
+  padding-left: 5px;
   border-bottom: 1px solid #CCC;
+  font-family: 'LibreBodoniItalic',serif;
+  font-style: italic;
+  font-weight: 400;
+  color: #000000
 }
 h1 small {
   font-size: 20px;
@@ -30,14 +38,20 @@ nav {
   font-size: 20px;
 }
 nav a {
-  margin-right: 20px;
+	color:#000000;
+  	margin-right: 20px;
 }
+
 a{
-  color: #C30C0C;
+  color: #585858;
   text-decoration: none;
 }
 a:hover {
-  color: #333;
+  color: #C30C0C;
+}
+
+em{
+	font-style: italic;
 }
 #container {
   margin: 0 auto;
