--- a/style.css
+++ b/style.css
@@ -25,8 +25,15 @@ h1 small {
   font-size: 20px;
   padding-left: 10px;
 }
+h2{
+	font-weight:100;
+}
 h2, h3 {
   margin-bottom: 5px;
+  
+}
+h3{
+font-weight:400;
 }
 p {
   margin-top: 5px;
