--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<script src="jquery.min.js" type="text/javascript"></script>
+<script src="jquery-1.6.4.min.js" type="text/javascript"></script>
 <script src="pagify.js" type="text/javascript"></script>
 
   {% include head.html %}
