--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -172,11 +172,12 @@
 }
 
 .post-list {
+    
     margin-left: 0;
     list-style: none;
-
     > li {
         margin-bottom: $spacing-unit;
+        
     }
 }
 
@@ -188,6 +189,11 @@
 .post-link {
     display: block;
     font-size: 24px;
+}
+
+.post-excp {
+background-color: #E3E3E3;
+word-wrap: break-word;
 }
 
 
