--- a/style.css
+++ b/style.css
@@ -33,7 +33,12 @@ h2, h3 {
   
 }
 h3{
-font-weight:400;
+	font-weight:400;
+}
+
+h4{
+	font-weight: 200;
+	font-family: 'LibreBodoniItalic',serif;
 }
 p {
   margin-top: 5px;
