--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{% include head.html %}</title>
+  <link rel="stylesheet" href="http://app.classeur.io/base-min.css" />
+  <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
+</head>
 
-  {% include head.html %}
-
- <body>
-{{ content }}
+<body bgcolor="#F6F6F6">
+  <div class="export-container">{{ content }}</div>
 </body>
 
 </html>
