--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,13 +1,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="http://app.classeur.io/base-min.css" />
-  <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
+  <script src="\jquery-1.6.4.min.js" type="text/javascript"></script>
+  <link rel="stylesheet" href="\style.css" type="text/css">
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/libre-bodoni" type="text/css"/>
+  
   <title>{{ page.title }}</title>
 </head>
 
-<body bgcolor="#F6F6F6">
-  <div class="export-container">{{ content }}</div>
+<body class="blog-posts">
+  <div class=home>{{ content }}</div>
 </body>
 
 </html>
